--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 .txt filter=lfs diff=lfs merge=lfs -text
 glove.6B.100d.txt filter=lfs diff=lfs merge=lfs -text
+dashboard/final_model/model.safetensors filter=lfs diff=lfs merge=lfs -text
